fix: not visible text on search

--- a/assets/css/parts/search.css
+++ b/assets/css/parts/search.css
@@ -24,6 +24,7 @@
     border: none;
     width: 90%;
     font-size: var(--font-size-input);
+    line-height: 1;
 }
 
 .search-input-container:hover, .search-input-container:focus {
